# incubator-heron

./: .asf.yaml  .bazelrc  .ci  .gitattributes  .gitignore  .gitmodules  .htaccess  .rat-excludes  .travis.yml  1  404.html  ADOPTERS.md  BUILD  CHANGELOG.md  CONFIG.ini  CONTRIBUTING.md  DISCLAIMER  EMPTY  GROUPS  LICENSE  LICENSE.md  NOTICE  OWNERS  README.md  RETIRED.txt  WORKSPACE  bazel_configure.py  build-centos.sh  build-travis.sh  build-ubuntu.sh  checkstyle_all.sh  code_of_conduct.md  heron_build.txt  heron_build_binpkgs.txt  heron_build_integration_test.txt  heron_build_integration_topology_test.txt  heron_build_tarpkgs.txt  heron_install.txt  heron_test_flaky.txt  heron_test_non_flaky.txt  (+11 more)
.applatix/: axscm_checkout.yaml  heron-build.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
404/: index.html
api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
config/: BUILD  autogen.sh  configure.ac  empty.cc  heron.def
config/m4/: acx_pthread.m4  gxx_stdio_filebuf.m4
content/: contact.html  download.html  events.html  help.html  index.html  release-notes.html  resources.html  sitemap.xml  team.html  users.html  versions.html
content/api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
content/blog/: atom.xml  feed.xml  index.html
content/css/: main.css
content/docs/: client-api-docs-overview.html  cluster-config-metrics.html  cluster-config-stream.html  cluster-config-system-level.html  cluster-config-tmanager.html  cluster-config-tmaster.html  compiling-code-organization.html  compiling-linux.html  compiling-osx.html  compiling-overview.html  compiling-running-tests.html  deployment-api-server.html  deployment-configuration.html  extending-heron-scheduler.html  getting-started-docker.html  guides-data-model.html  (+40 more)
css/: style.min.css
docker/: .tarignore  Dockerfile.build  Dockerfile.centos6  Dockerfile.centos7  Dockerfile.dist.centos7  Dockerfile.dist.ubuntu14.04  Dockerfile.dist.ubuntu15.10  Dockerfile.dist.ubuntu16.04  Dockerfile.ubuntu14.04  Dockerfile.ubuntu14.04-heron0.14.0  Dockerfile.ubuntu15.10  Dockerfile.ubuntu16.04  Readme.md  build-artifacts.sh  build-docker-build.sh  build-docker.sh  build-heron-docker.sh  ci-docker.sh  compile-darwin.sh  compile-docker.sh  compile-platform.sh  compile.sh  docker-compose.yml  start-docker.sh  start-services.sh  stop-docker.sh
docs/: SUMMARY.md  book.json  heron-shell.md  index.md  index.rst  index.xml  install.html
heron/: ...  BUILD
heron-conf/: BUILD
heron-spi-artifact/: heron-spi-0.20.3-incubating.pom
heron/storage/src/cpp/libhdfs3/src/: .gitignore  CMakeLists.txt
heron/storage/src/cpp/libhdfs3/src/client/: BlockReader.h  DataTransferProtocol.h  DataTransferProtocolSender.cpp  DirectoryIterator.h  FileSystem.cpp  FileSystemImpl.h  Hdfs.cpp  InputStream.cpp  KerberosName.h  LeaseRenewer.cpp  LocalBlockReader.h  OutputStream.h  Packet.cpp  PacketHeader.cpp  PacketHeader.h  PacketPool.cpp  PacketPool.h  Pipeline.cpp  Pipeline.h  PipelineAck.h  ReadShortCircuitInfo.cpp  ReadShortCircuitInfo.h  RemoteBlockReader.cpp  TokenInternal.h  UserInfo.cpp  UserInfo.h
heron/storage/src/cpp/libhdfs3/src/server/: Datanode.h  DatanodeInfo.h  ExtendedBlock.h  LocatedBlocks.cpp  Namenode.h  NamenodeImpl.cpp  NamenodeProxy.cpp  NamenodeProxy.h  RpcHelper.h
heron/storage/src/cpp/libhdfs3/test/: CMakeLists.txt
heron/storage/src/cpp/libhdfs3/test/data/: function-secure.xml  function-test.xml  function-test.xml.sample  hdfs-default.xml  invalid.xml  invalidha.xml  unit-config.xml  validha.xml
heron/storage/src/cpp/libhdfs3/test/function/: CMakeLists.txt  TestCInterface.cpp  TestFileSystem.cpp  TestInputStream.cpp  TestOutputStream.cpp
heron/storage/src/cpp/libhdfs3/test/secure/: CMakeLists.txt  SecureFunctionTest.cpp  TestSecureCInterface.cpp
heron/storage/src/cpp/libhdfs3/test/unit/: CMakeLists.txt  TestBufferedSocketReader.cpp  TestChecksum.cpp  TestException.cpp  TestGetHANamenodes.cpp  TestLeaseRenewer.cpp  TestLocatedBlocks.cpp  TestLruMap.cpp  TestRpcChannel.cpp  TestRpcClient.cpp  TestSessionConfig.cpp  TestSocket.cpp  TestXmlConfig.cpp  UnitTestInputStream.cpp  UnitTestMain.cpp  UnitTestOutputStream.cpp  UnitTestUtils.h
integration-test/: README  README.md
integration_test/: README.md
js/: app.min.js
licenses/: LICENSE-Docusaurus-1.13.0.txt  LICENSE-JSXTransformer_js_apache.txt  LICENSE-JSXTransformer_js_bsd.txt  LICENSE-JSXTransformer_js_mit.txt  LICENSE-Underscore.js-1.6.0.txt  LICENSE-autogen.sh.txt  LICENSE-cloudpickle.txt  LICENSE-cpplint.txt  LICENSE-d3-3.4.11.txt  LICENSE-gerrit.txt  LICENSE-html5shiv-3.6.2pre.md  LICENSE-k8s-zookeeper-docker.txt  LICENSE-list.js-1.1.1.txt  LICENSE-react.txt
release/: BUILD  heron.template.pom  package_release.sh  release-process.md  release.spec
scripts/: BUILD  README.md  check_java_code_style.sh  common.sh  detect_os_type.sh  errors.sh  get_all_heron_paths.sh  publish.sh  run_integration_test.sh  run_integration_topology_test.sh  setup-eclipse.sh  setup-intellij.sh
spouts/: README.md
tools/: bazel.rc  settings.xml
vagrant/: README.md  Vagrantfile  clusters.json  init.sh  kafka-09.json  kill-topology-mesos.sh  kill-topology.sh  local-ci.sh  stack-deploy.json  submit-08-topology-mesos.sh  submit-08-topology.sh  submit-09-topology-mesos.sh  submit-09-topology.sh  submit-custom-topology-mesos.sh  submit-custom-topology.sh  submit-mesos-scheduler.sh  submit-stack-deploy.sh
website/: .gitignore  .htmltest.yml  Gemfile  Makefile  README.md  build_site.sh  config.yaml  gulpfile.js  javadocs.sh  link-checker-output.txt  linkchecker.sh  package.json  publish_site.sh
website-versioned/: troubleshooting-guide.md
website2/: .gitignore  Dockerfile  README.md  docker-compose.yml
(+14155 files in other folders)
